# zhangkai

./: .gitignore  2026-07-10-CC修复记录.md  CC_DIARY_2026-07-17.md  CC_NEXUS_WORKFLOW.md  CLAUDE.md  NEXUS_ARCHITECTURE.md  NEXUS_DIARY_2026-07-08.md  NEXUS_DIARY_2026-07-09.md  NEXUS_DIARY_2026-07-11.md  NEXUS_DIARY_2026-07-12.md  NEXUS_DIARY_2026-07-14.md  NEXUS_DIARY_2026-07-15.md  NEXUS_DIARY_2026-07-16.md  NEXUS_DORMANT_MODULES.md  NEXUS_EVOLUTION_PLAN.md  NEXUS_MODULE_AUDIT.md  NEXUS_V20_ARCHITECTURE.md  PROJECT_NEXUS.md  SKILL.md  SOUL.md  USER.md  _backtest_600519.txt  _backtest_out.txt  _bcheck.txt  _bcrash.txt  _blog.txt  _blog2.txt  _blog3.txt  _blog_full.txt  _blog_latest.txt  _check_cc.ps1  _check_cc_status.ps1  _cleanlog.txt  _crash.txt  _evo_func.txt  _final2.txt  _find_bugs.py  _find_bugs2.py  _find_bugs3.py  _find_bugs4.py  (+87 more)
.claude/: SOUL.md  architecture.md  constitution.md  settings.json
.nexus_backup/: {locate.matches[0]}.bak
CC_NEXUS_AUDIT/: NEXUS_COMPLETENESS.md  NEXUS_DUPLICATES.md  _baseline_pygount.txt  _duplicate_hashes.txt  _spec_v1.md  _stage8_md5_check.py  _work_plan.md  stage_10_report.md  stage_11_report.md  stage_12_report.md  stage_13_report.md  stage_14_report.md  stage_15_report.md  stage_16_report.md  stage_17_report.md  stage_18_report.md  stage_19_report.md  stage_21_report.md  stage_22_report.md  stage_23_report.md  stage_24_report.md  (+15 more)
qiankun/: ARCHITECTURE.md  daily_scan.py  ohlcv_server.py  portfolio.json  pyproject.toml  scan_trade.py  start.bat
qiankun/src/qiankun/core/: config.py
qiankun/src/qiankun/data/: fetcher.py
(+111 files in other folders)
